[tool.poetry]
authors = ["Arjun KayalMoni <arjun.umathanu@gmail.com>"]
description = ""
name = "blogger"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.70.0"
httpx = "^0.20.0"
python = "^3.10"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
bandit = "^1.7.0"
black = "^21.9b0"
flake8 = "^4.0.1"
isort = "^5.9.3"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
requests = "^2.26.0"
safety = "^1.10.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
